# semantic-memory-mcp-server

./: .dockerignore  .gitignore  BENCHMARKS.md  Dockerfile  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  REPOSITORY_LAYOUT.md  SECURITY.md  TAG_PREPARATION.md  V1_0_1_TAG_PLAN.md  docker-compose.yml  docker-desktop-settings.example.json  docker-desktop-settings.writable.example.json  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
benchmark_results/: rwif_vs_dense_cosine_baseline.json  rwif_vs_dense_cosine_baseline.md  rwif_vs_dense_text_array_baseline.json  rwif_vs_dense_text_array_baseline.md  rwif_vs_dense_text_corpus_baseline.json  rwif_vs_dense_text_corpus_baseline.md
sample_data/: README.md  benchmark_text_calibration_array.jsonl  benchmark_text_large_calibration.jsonl  benchmark_text_large_queries.jsonl  benchmark_text_large_records.jsonl  benchmark_text_queries_array.jsonl  benchmark_text_records_array.jsonl  demo_federated_memory_config.json  demo_local_federated_memory_config.json  demo_readme_semantic_store.rwif  personal_records_sample.jsonl  research_notes_sample.jsonl
scripts/: benchmark_rwif_vs_dense_baseline.py  benchmark_rwif_vs_dense_text_array.py  benchmark_rwif_vs_dense_text_corpus.py  regenerate_benchmark_artifacts.py  semantic_memory_mcp_server.py
src/big_ai_brain/: __init__.py  federated_memory.py  semantic_memory_mcp.py  semantic_memory_service.py
src/rwif_activation_core/: __init__.py  (+1 more)
tests/: test_semantic_memory_federation.py
(+9 files in other folders)
